# j2735-ffm-java

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile-api  Dockerfile-build  Dockerfile-build-arm64  Dockerfile-test  LICENSE  README.md  RELEASE-NOTES.md  docker-compose-api.yml  docker-compose-build.yml  docker-compose.yml  run-java.sh  run-jextract.sh  run-lib.sh  settings.gradle
.github/workflows/: ci.yml  ci.yml.temp  dockerhub.yml  publish.yml
app/: build.gradle
generated-files/: .gitignore  README.md  prepare-for-windows.sh
generated-jextract/: README.md
j2735-2024-api/: build.gradle  settings.gradle
j2735-2024-api/http-tests/: api-docs.http  jer-to-uper-binary.http  jer-to-uper-hex.http  jer-to-xer.http  uper-binary-to-jer.http  uper-binary-to-xer.http  uper-hex-to-jer.http  uper-hex-to-xer.http  xer-to-jer.http  xer-to-uper-binary.http  xer-to-uper-hex.http
j2735-2024-ffm-lib/: build.gradle  settings.gradle
j2735-2024-ffm-lib-build/: build.gradle  settings.gradle
j2735-2024-ffm-lib/c-headers/: AbsolutePosition3d.h  AccelerationSet4Way.h  Activity.h  ActuatedInterval.h  AddGrpB_Angle.h  AddGrpB_TimeMark.h  AddGrpC_Altitude.h  AdviceInstructionsMandatory.h  AdviceInstructionsRecommendations.h  AdvisorySpeedType.h  AllowedManeuvers.h  AltitudeConfidence.h  AltitudeValue.h  AmbientAirPressure.h  AngularVelocity.h  AnimalPropelledType.h  AnimalType.h  AntiLockBrakeStatus.h  ApplicableHeading.h  AreaOrSegmentChargingInfo.h  AreaType.h  AsphaltOrTar.h  AtmosPressureMeasurementStdDev.h  Attachment.h  AttachmentRadius.h  Attitude.h  AttitudeConfidence.h  AuxiliaryBrakeStatus.h  AxesMovement.h  AxleLocation.h  AxleWeight.h  AxleWeightList.h  AxleWeightSet.h  Axles.h  AxlesCharges.h  BSMcoreData.h  BankAngle.h  BasicSafetyMessage.h  BasicVehicleRole.h  BrakeAppliedStatus.h  (+497 more)
j2735-2024-ffm-lib/c-lib/: README.md
j2735-2024-ffm-lib/c-src/: AbsolutePosition2d.c  AbsolutePosition2d.h  AbsolutePosition3d.c  AccelSteerYawRateConfidence.c  AccelSteerYawRateConfidence.h  AccelTimeConstant.c  AccelTimeConstant.h  Acceleration.c  Acceleration.h  AccelerationConfidence.c  AccelerationConfidence.h  AccelerationSet4Way.c  AcceleratorPedalPosition.c  AcceleratorPedalPosition.h  AccidentsAndIncidents.c  AccidentsAndIncidents.h  AccountStatus.c  AccountStatus.h  AckPolicy.c  AckPolicy.h  Activity.c  ActualNumberOfPassengers.c  ActualNumberOfPassengers.h  ActuatedInterval.c  AddGrpB_Angle.c  AddGrpB_Elevation.c  AddGrpB_Elevation.h  AddGrpB_MsgCount.c  AddGrpB_MsgCount.h  AddGrpB_TimeMark.c  AddGrpC_Altitude.c  AdviceInstructionsMandatory.c  AdviceInstructionsRecommendations.c  AdvisorySpeed.c  AdvisorySpeed.h  AdvisorySpeedList.c  (+1440 more)
lib/: README.md
publish/: build.gradle  settings.gradle
rest-api/: build.gradle
src/: convert.c  convert.h
(+1275 files in other folders)
